[package]
name = "debil-mysql"
version = "0.1.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debil = { git = "https://github.com/myuon/debil.git", rev = "b6db73602d6d1b6d4c11dd0bf668c940393b74be" }
mysql_async = "0.21.1"
futures = "0.3.1"
tokio = { version = "0.2.9", features = ["rt-core"] }
failure = "0.1.6"
async-trait = "0.1.17"
