[package]
name = "debil-mysql"
version = "0.5.0"
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/debil-mysql"
description = "MySQL implementation for debil"
repository = "https://github.com/myuon/debil-mysql"
readme = "README.md"
keywords = ["database", "mysql"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debil = "0.4.0"
mysql_async = "0.26.0"
futures = "0.3.1"
tokio = { version = "1.0", features = ["rt", "macros"] }
failure = "0.1.6"
async-trait = "0.1.17"
